--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "tolacika/oktatasi-hivatal-hw",
     "type": "project",
     "require": {
-        "php": "^7.4"
+        "php": "^7.4",
+        "illuminate/collections": "^8.83"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.6"
